PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/Outsoursing__c.object-meta.xml
<CustomObject>
    <label>외주처리</label>
    <nameField>
        <displayFormat>OS{000000}</displayFormat>
        <label>외주처리 코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>