PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>업체</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>외주처리</relationshipLabel>
    <relationshipName>Outsoursing</relationshipName>
    <type>Lookup</type>
</CustomField>