PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/CntDisuse__c.field-meta.xml
<CustomField>
    <fullName>CntDisuse__c</fullName>
    <label>폐기수량</label>
    <summarizedField>OutsoursingResult__c.CntDisuse__c</summarizedField>
    <summaryForeignKey>OutsoursingResult__c.Outsoursing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>