PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/CntError__c.field-meta.xml
<CustomField>
    <fullName>CntError__c</fullName>
    <label>에러수량</label>
    <summarizedField>OutsoursingResult__c.CntError__c</summarizedField>
    <summaryForeignKey>OutsoursingResult__c.Outsoursing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>