PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/CntImport__c.field-meta.xml
<CustomField>
    <fullName>CntImport__c</fullName>
    <label>처리 후 입고수량</label>
    <summarizedField>OutsoursingResult__c.CntImport__c</summarizedField>
    <summaryForeignKey>OutsoursingResult__c.Outsoursing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>