PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/CntInventory__c.field-meta.xml
<CustomField>
    <fullName>CntInventory__c</fullName>
    <formula>CntOutSoursing__c -  CntImport__c -  CntError__c -  CntDisuse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>외주재고수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>