PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/CntOutSoursing__c.field-meta.xml
<CustomField>
    <fullName>CntOutSoursing__c</fullName>
    <label>의뢰수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>