PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/DateOutsoursing__c.field-meta.xml
<CustomField>
    <fullName>DateOutsoursing__c</fullName>
    <label>외주처리일자</label>
    <type>Date</type>
</CustomField>