PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>재고</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>외주처리</relationshipLabel>
    <relationshipName>Outsoursing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>