PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>품목</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>외주처리</relationshipLabel>
    <relationshipName>Outsoursing</relationshipName>
    <type>Lookup</type>
</CustomField>