PA_Education/TestMenifest/force-app/main/default/objects/Outsoursing__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>외주구분</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>도장</fullName>
                <default>true</default>
                <label>도장</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>